# wefe

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  .travis.yml  HardDebias.ipynb  LICENSE  MANIFEST.in  README.rst  User_Guide.ipynb  WEAT_experiments.ipynb  WEFE_rankings.ipynb  WEFE_rankings.py  WordEmbeddingModelDev.ipynb  algorithm_benchmark.ipynb  cov.xml  develop.ipynb  enviornment.yml  metric_benchmark.ipynb  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.circleci/: config.yml
.github/workflows/: ci.yaml
doc/: about.rst  api.rst  conf.py  contribute.rst  create_metric.rst  examples.rst  index.rst  loading_embeddings.rst  quick_start.rst  rank.rst  replications.rst  user_guide.rst  user_guide_measurement.rst  user_guide_mitigation.rst
doc/_static/: theme_overrides.css
doc/_templates/: class.rst  function.rst
doc/api/: api.rst
doc/conceptual_guides/: measurement_framework.rst  mitigation_framework.rst
doc/examples/: multilingual.rst  replications.rst  wefe_case_study.rst
doc/getting_started/: about.rst
doc/resources/: WEAT_gender_results.html
doc/user_guide/: measurement.ipynb  measurement.rst  mitigation.ipynb  mitigation.rst
docs/: Makefile  conf.py  index.rst
docs/_templates/: class.rst  numpydoc_docstring.py
docs/api/: api.rst
docs/benchmark/: benchmark.rst  changes.rst
docs/conceptual_guides/: measurement_framework.rst  mitigation_framework.rst  references.rst
docs/examples/: multilingual.rst  replications.rst  wefe_case_study.rst
docs/getting_started/: about.rst  quick_start.rst
docs/user_guide/: contribute.rst  loading_embeddings.rst  measurement_user_guide.rst  mitigation_user_guide.rst
examples/: Contributing.ipynb  Harsh_Readme  KDNuggetsTutorial.ipynb  Metric_implementation_guide.ipynb  README.txt  RNSB_experiments.ipynb  Untitled.ipynb  User_Guide.ipynb  WEAT_experiments.ipynb  WEFE_rankings.ipynb  benchmark.ipynb  eng.py  french.py  german.py  ital.py  measurement_user_guide.ipynb  mitigation_user_guide.ipynb  nl.py  replicate_weat.py  spanish.py  swedish.py
examples/multilingual/: Harsh_Readme  dutch.ipynb  english.ipynb  french.ipynb  french.py  german.ipynb  german.py  ital.py  italian.ipynb  nl.py  spanish.ipynb  swedish.ipynb  swedish.py
examples_22/: replicate_weat.py  subqueries.py
examples_old/: basic_usage.py
results/: Ethnicity_RND.csv  Ethnicity_RNSB.csv  Ethnicity_WEAT.csv  Ethnicity_WEAT_ES.csv  Ethnicity_WEAT_EZ.csv  Ethnicity_ranking.csv  Gender_RND.csv  Gender_RNSB.csv  Gender_WEAT.csv  Gender_WEAT_ES.csv  Gender_WEAT_EZ.csv  Gender_ranking.csv  Religion_RND.csv  Religion_RNSB.csv  Religion_WEAT.csv  Religion_WEAT_ES.csv  Religion_WEAT_EZ.csv  Religion_ranking.csv  overall_ranking.csv  rankings_RND.csv  results_RND_Religion.csv  results_WEAT_EZ_Ethnicity.csv  results_WEAT_EZ_Gender.csv
test-results/: junit.xml
tests/: conftest.py  test_datasets.py  test_debias.py  test_preprocessing.py  test_query.py  test_utils.py  test_word_embedding_model.py
tests/debias/: conftest.py  test_base_debias.py  test_double_hard_debias.py  test_half_sibling_regression.py  test_hard_debias.py  test_multiclass_hard_debias.py  test_repulsion_attraction_neutralization.py
tests/metrics/: conftest.py  test_ECT.py  test_MAC.py  test_RIPA.py  test_RND.py  test_RNSB.py  test_WEAT.py  test_base_metric.py
wefe/: __init__.py  preprocessing.py  query.py  utils.py  word_embedding.py  word_embedding_model.py
wefe/datasets/: WEAT.json  __init__.py  datasets.py  weat_w2v.txt
(+49 files in other folders)
